Start of EPG integration DO NOT MERGE
1/? integrating a full EPG by parsing XmlTv
files into programs.

Related: #140, #36